refactor: move discrete-agent into ts-server-boilerplate
